# devpulse-cli

./: INSTALL.md  README.md  install.sh  pyproject.toml  urls.txt
devpulse/: __init__.py  main.py
devpulse/commands/: __init__.py  curl.py  latency.py  port.py
devpulse/core/: formatter.py  models.py  utils.py
