[project]
name = "devpulse-cli"
version = "0.1.0"
description = "Developer CLI for API latency testing, port management, and curl-to-code conversion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Aryan" },
]
keywords = ["cli", "latency", "curl", "developer-tools", "port-killer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/aryanraj2713/devpulse-cli"
Repository = "https://github.com/aryanraj2713/devpulse-cli"

[project.scripts]
devpulse = "devpulse.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devpulse"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
